@@ -9,6 +9,8 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.2.4
 
 New features:
+- 3498421: Set a default URL value for replication
+- 3498373: Remove script and object tag content in db crawler
 - 3495004: Add progress info in scheduler task	
 - 3490031: Asynchronous XML upload
 - 3489935: Default stop words list
